# langgraph-whatsapp-agent

./: .env.example  README.md  pyproject.toml
src/agents/base/: exa.py  graph.py  knowledge.py  memory.py  prompt.py  tools.py
src/langgraph_whatsapp/: channel.py  config.py  server.py
src/langgraph_whatsapp/utils/: media_utils.py  speech_to_text.py  twilio_utils.py
